Try to resolve concurrency with bad singleton desing